@@ -12,6 +12,10 @@ What's New in Python 3.2 Alpha 2?
 Core and Builtins
 -----------------
 
+- Issue #9542: Create PyUnicode_FSDecoder() function, a ParseTuple converter:
+  decode bytes objects to unicode using PyUnicode_DecodeFSDefaultAndSize();
+  str objects are output as-is.
+
 - Issue #9203: Computed gotos are now enabled by default on supported
   compilers (which are detected by the configure script).  They can still
   be disable selectively by specifying --without-computed-gotos.
